Project4/src/parser/MiniSql.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniSql.java */
package parser;

import java.io.DataInputStream;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import global.AttrType;
import global.AttrOperator;

@SuppressWarnings({"unchecked", "unused", "static-access"})
public class MiniSql/*@bgen(jjtree)*/implements MiniSqlTreeConstants, MiniSqlConstants {/*@bgen(jjtree)*/
  protected JJTMiniSqlState jjtree = new JJTMiniSqlState();
  public static void main(String args[]) throws ParseException {

    MiniSql p = null;
    if (args.length < 1) {

      System.out.println("Reading from stdin.");
      p = new MiniSql(System.in);

    } else {

      try {
        p = new MiniSql(new DataInputStream(new FileInputStream(args[0])));
        System.out.println("Reading from " + args[0]);
      } catch (FileNotFoundException e) {
        System.out.println(args[0] + " not found; reading from stdin.");
        p = new MiniSql(System.in);
      }

    } // else

    p.SqlStatement();
    System.out.println("Parse Successful");

  }

/*****************************************************************************\
 * Top-Level Statements
\*****************************************************************************/
  final public AST_Start Start() throws ParseException {
                             /*@bgen(jjtree) _Start */
  AST_Start jjtn000 = new AST_Start(JJT_START);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_HELP:
        jj_consume_token(K_HELP);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.isHelp = true; {if (true) return jjtn000;}
        break;
      case K_STATS:
        jj_consume_token(K_STATS);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.isStats = true; {if (true) return jjtn000;}
        break;
      case K_QUIT:
        jj_consume_token(K_QUIT);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.isQuit = true; {if (true) return jjtn000;}
        break;
      case K_CREATE:
      case K_DELETE:
      case K_DESCRIBE:
      case K_DROP:
      case K_EXPLAIN:
      case K_INSERT:
      case K_SELECT:
      case K_UPDATE:
        SqlStatement();
        jj_consume_token(O_SEMI);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void SqlStatement() throws ParseException {
    if (jj_2_1(2)) {
      CreateTableStmt();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_CREATE:
        CreateIndexStmt();
        break;
      default:
        jj_la1[1] = jj_gen;
        if (jj_2_2(2)) {
          DropTableStmt();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_DROP:
            DropIndexStmt();
            break;
          case K_DESCRIBE:
            DescribeStatement();
            break;
          case K_INSERT:
            InsertStatement();
            break;
          case K_EXPLAIN:
          case K_SELECT:
            SelectStatement();
            break;
          case K_UPDATE:
            UpdateStatement();
            break;
          case K_DELETE:
            DeleteStatement();
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  final public void CreateTableStmt() throws ParseException {
                                        /*@bgen(jjtree) _CreateTable */
  AST_CreateTable jjtn000 = new AST_CreateTable(JJT_CREATETABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_CREATE);
      jj_consume_token(K_TABLE);
      jj_consume_token(S_IDENTIFIER);
   jjtn000.fileName = token.image;
      jj_consume_token(O_LPAREN);
      ColumnList();
      jj_consume_token(O_RPAREN);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void CreateIndexStmt() throws ParseException {
                                        /*@bgen(jjtree) _CreateIndex */
  AST_CreateIndex jjtn000 = new AST_CreateIndex(JJT_CREATEINDEX);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_CREATE);
      jj_consume_token(K_INDEX);
      jj_consume_token(S_IDENTIFIER);
   jjtn000.fileName = token.image;
      jj_consume_token(K_ON);
      jj_consume_token(S_IDENTIFIER);
   jjtn000.ixTable = token.image;
      jj_consume_token(O_LPAREN);
      jj_consume_token(S_IDENTIFIER);
                             jjtn000.ixColumn = token.image;
      jj_consume_token(O_RPAREN);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DropTableStmt() throws ParseException {
                                    /*@bgen(jjtree) _DropTable */
  AST_DropTable jjtn000 = new AST_DropTable(JJT_DROPTABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_DROP);
      jj_consume_token(K_TABLE);
      jj_consume_token(S_IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.fileName = token.image;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DropIndexStmt() throws ParseException {
                                    /*@bgen(jjtree) _DropIndex */
  AST_DropIndex jjtn000 = new AST_DropIndex(JJT_DROPINDEX);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_DROP);
      jj_consume_token(K_INDEX);
      jj_consume_token(S_IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.fileName = token.image;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DescribeStatement() throws ParseException {
                                       /*@bgen(jjtree) _Describe */
  AST_Describe jjtn000 = new AST_Describe(JJT_DESCRIBE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_DESCRIBE);
      jj_consume_token(S_IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.fileName = token.image;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void InsertStatement() throws ParseException {
                                   /*@bgen(jjtree) _Insert */
  AST_Insert jjtn000 = new AST_Insert(JJT_INSERT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_INSERT);
      jj_consume_token(K_INTO);
      jj_consume_token(S_IDENTIFIER);
   jjtn000.fileName = token.image;
      jj_consume_token(K_VALUES);
      jj_consume_token(O_LPAREN);
      SqlValueExpressionList();
      jj_consume_token(O_RPAREN);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void SelectStatement() throws ParseException {
                                   /*@bgen(jjtree) _Select */
  AST_Select jjtn000 = new AST_Select(JJT_SELECT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_EXPLAIN:
        jj_consume_token(K_EXPLAIN);
                jjtn000.isExplain = true;
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(K_SELECT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DISTINCT:
        jj_consume_token(K_DISTINCT);
                            jjtn000.isDistinct = true;
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      SelectClause();
      FromClause();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_WHERE:
        WhereClause();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_ORDER:
        OrderByClause();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void UpdateStatement() throws ParseException {
                                   /*@bgen(jjtree) _Update */
  AST_Update jjtn000 = new AST_Update(JJT_UPDATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_UPDATE);
      jj_consume_token(S_IDENTIFIER);
   jjtn000.fileName = token.image;
      jj_consume_token(K_SET);
      ColumnValues();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_WHERE:
        WhereClause();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DeleteStatement() throws ParseException {
                                   /*@bgen(jjtree) _Delete */
  AST_Delete jjtn000 = new AST_Delete(JJT_DELETE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_DELETE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_FROM:
        jj_consume_token(K_FROM);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(S_IDENTIFIER);
   jjtn000.fileName = token.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_WHERE:
        WhereClause();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*****************************************************************************\
 * Statement Clauses
\*****************************************************************************/
  final public void ColumnList() throws ParseException {
                                 /*@bgen(jjtree) _IdentList */
  AST_IdentList jjtn000 = new AST_IdentList(JJT_IDENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(S_IDENTIFIER);
                  jjtn000.names.add(token.image);
      ColumnType();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_COMMA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_1;
        }
        jj_consume_token(O_COMMA);
        jj_consume_token(S_IDENTIFIER);
                    jjtn000.names.add(token.image);
        ColumnType();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ColumnType() throws ParseException {
                                  /*@bgen(jjtree) _ColumnType */
  AST_ColumnType jjtn000 = new AST_ColumnType(JJT_COLUMNTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_INTEGER:
        jj_consume_token(K_INTEGER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.type = AttrType.INTEGER;
   jjtn000.size = 4;
        break;
      case K_FLOAT:
        jj_consume_token(K_FLOAT);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.type = AttrType.FLOAT;
   jjtn000.size = 4;
        break;
      case K_STRING:
        jj_consume_token(K_STRING);
   jjtn000.type = AttrType.STRING;
   jjtn000.size = 25;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_LPAREN:
          jj_consume_token(O_LPAREN);
          jj_consume_token(S_INTEGER);
                 jjtn000.size = Integer.parseInt(token.image);
          jj_consume_token(O_RPAREN);
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void SelectClause() throws ParseException {
                                   /*@bgen(jjtree) _IdentList */
  AST_IdentList jjtn000 = new AST_IdentList(JJT_IDENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_STAR:
        jj_consume_token(O_STAR);
        break;
      case S_IDENTIFIER:
        jj_consume_token(S_IDENTIFIER);
                  jjtn000.names.add(token.image);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case O_COMMA:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_2;
          }
          jj_consume_token(O_COMMA);
          jj_consume_token(S_IDENTIFIER);
                              jjtn000.names.add(token.image);
        }
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void FromClause() throws ParseException {
                                 /*@bgen(jjtree) _IdentList */
  AST_IdentList jjtn000 = new AST_IdentList(JJT_IDENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_FROM);
      jj_consume_token(S_IDENTIFIER);
                           jjtn000.names.add(token.image);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_COMMA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_3;
        }
        jj_consume_token(O_COMMA);
        jj_consume_token(S_IDENTIFIER);
                              jjtn000.names.add(token.image);
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void WhereClause() throws ParseException {
    jj_consume_token(K_WHERE);
    SqlExpression();
  }

  final public void OrderByClause() throws ParseException {
                                  /*@bgen(jjtree) _OrderBy */
  AST_OrderBy jjtn000 = new AST_OrderBy(JJT_ORDERBY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_ORDER);
      jj_consume_token(K_BY);
      jj_consume_token(S_IDENTIFIER);
                  jjtn000.addName(token.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DESC:
        jj_consume_token(K_DESC);
             jjtn000.setDesc();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_COMMA:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_4;
        }
        jj_consume_token(O_COMMA);
        jj_consume_token(S_IDENTIFIER);
                    jjtn000.addName(token.image);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_DESC:
          jj_consume_token(K_DESC);
               jjtn000.setDesc();
          break;
        default:
          jj_la1[18] = jj_gen;
          ;
        }
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ColumnValues() throws ParseException {
                                   /*@bgen(jjtree) _IdentList */
  AST_IdentList jjtn000 = new AST_IdentList(JJT_IDENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(S_IDENTIFIER);
   jjtn000.names.add(token.image);
      jj_consume_token(O_EQ);
      SqlValueExpression();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_COMMA:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_5;
        }
        jj_consume_token(O_COMMA);
        jj_consume_token(S_IDENTIFIER);
     jjtn000.names.add(token.image);
        jj_consume_token(O_EQ);
        SqlValueExpression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*****************************************************************************\
 * SQL Expressions
\*****************************************************************************/
  final public void SqlExpression() throws ParseException {
                                 /*@bgen(jjtree) _OrExpr */
  AST_OrExpr jjtn000 = new AST_OrExpr(JJT_OREXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SqlAndExpression();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_OR:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_6;
        }
        jj_consume_token(K_OR);
        SqlAndExpression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
